# Chess-Chess

./: .gitignore  AGENTS.md  SharkChess.sln  鲨鱼象棋介绍及版本升级说明.txt
Chess-Chess/: .gitignore  App.config  App.xaml  CanJuSheJi.xaml  CanJuSheJi.xaml.cs  Chess.csproj  Chess.sln  Dictionary.xaml  GlobalValue.cs  GuPuInputPage.xaml  GuPuInputPage.xaml.cs  GuPuLianXiPage.xaml  GuPuLianXiPage.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  PropertyChangedClass.cs  QiPanPage.xaml  QiPanPage.xaml.cs  README.md  Settings.Designer.cs  Settings.settings  testWindow.xaml  testWindow.xaml.cs
Chess-Chess/CustomClass/: ColorListItem.xaml  ColorListItem.xaml.cs  HuoHuan.xaml  HuoHuan.xaml.cs  JueSha.xaml  JueSha.xaml.cs  MyArrows.xaml  MyArrows.xaml.cs  MyGraphics.cs  PathPoint.xaml  PathPoint.xaml.cs  QiZi.xaml  QiZi.xaml.cs  Qipu.cs
Chess-Chess/DB/: KaiJuKu.db
Chess-Chess/DataClass/: QiPuBook.cs
Chess-Chess/OpenSource/: SqliteHelper.cs
Chess-Chess/SuanFa/: JiangJun.cs  MoveCheck.cs
Chess-Chess/SubWindow/: ChildSelecteWindow.xaml  ChildSelecteWindow.xaml.cs  Save_Window.xaml  Save_Window.xaml.cs  SpyWindow.xaml  SpyWindow.xaml.cs  SystemColor.xaml  SystemColor.xaml.cs  (+6 more)
SharkChess/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  SharkChess.csproj
SharkEngine/: CMakeLists.txt  SharkEngine.vcxproj
SharkEngine/include/core/: Board.h  Evaluation.h  MoveGen.h  Search.h  Types.h
SharkEngine/include/uci/: UCIProtocol.h
SharkEngine/src/: main.cpp
SharkEngine/src/core/: Board.cpp  Evaluation.cpp  MoveGen.cpp  Search.cpp
SharkEngine/src/uci/: UCIProtocol.cpp
(+39 files in other folders)
